--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "geist": "^1.2.2",
-    "next": "14.1.2",
+    "next": "^14.1.2",
     "next-themes": "^0.2.1",
     "openai": "^4.28.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.0",
     "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.2.1",
